<resources>
    <string name="app_name">Shriji Cabs</string>
    <string name="title_activity_maps">Map</string>
    <string name="safar">Daily Safar</string>
    <string name="rental">Rental</string>
    <string name="tourAndTrip"><![CDATA[Tour & Trip]]></string>
    <string name="loginRegister">Login/Register Now</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerNow">Sign Up</string>
    <string name="loginWelcome">Welcome To</string>
    <string name="shreejiCabs">SHRIJI CABS Pvt. Ltd.</string>
    <string name="shrijiCabsTitle">SHRIJI CABS</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="or">Or</string>
    <string name="navigation_drawer_open">Navigation Open</string>
    <string name="navigation_drawer_close">Navigation Close</string>
    <string name="pickupFrom">Pickup From</string>
    <string name="pickupTo">Pickup To</string>
    <string name="oneWay">One Way</string>
    <string name="roundWay">Round Way</string>
    <string name="bookNow">Book Now</string>
    <string name="selectCategory">Select Category</string>
    <string name="dropLocation">Drop Location</string>
    <string name="selectCars">Select Cars</string>
    <string name="acOrNonAc">Ac / Non Ac</string>
    <string name="seater">Seater</string>
    <string name="dontHaveAnAccount">Dont have an account ? SIGN UP</string>
    <string name="profile">Profile</string>
    <string name="carsCategory">Cars Category</string>
    <string name="paymentDetails">Payment Details</string>
    <string name="yourBookings">Your Bookings</string>
    <string name="yourRidesHistory">Your Rides History</string>
    <string name="freeRides">Free Rides</string>
    <string name="notification">Notification</string>
    <string name="insurance">Insurance</string>
    <string name="setting">Setting</string>
    <string name="referEarn">Refer And Earn</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="rateUs">Rate Us</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_subtext">Please Enter The Verification Code</string>
    <string name="validate">Submit</string>
    <string name="aboutUs">About Us</string>
    <string name="updateProfle">Update Profile</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="submit">Submit</string>
    <string name="alreadyHavingAccount">Already Having Account ? Login Now</string>
    <string name="uploadProfile">Upload Profile</string>
    <string name="enter_phone_number">Please Enter Your Phone Number</string>
    <string name="ok">Ok</string>
    <string name="confirmAdress">Confirm Address</string>
    <string name="next">Next</string>
    <string name="changePassword">Change Password</string>
    <string name="noNewNotifications">No New Notifications</string>
    <string name="ac">Ac</string>
    <string name="non_Ac">Non Ac</string>
    <string name="feebback">Feedback</string>
    <string name="enterYourFeedback">Enter Your Feedback</string>
    <string name="pay">Total Pay</string>
    <string name="select_your_payment">Select Payment Method</string>
    <string name="netbanking">Net banking</string>
    <string name="credit_debit_card">Credit &amp; Debit Cards</string>
    <string name="cash_hand">Cash in hand</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>

    <!-- rental screen -->

</resources>
