<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_color"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="35dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/userProfileImage"
            android:src="@drawable/avatar"/>

        <TextView
            android:id="@+id/profileView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/bookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourBookings"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/ridesHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourRidesHistory"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="10dp"
            android:background="@color/backgroundNavColor"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/freeRides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/freeRides"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            android:paddingTop="5dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/insurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insurance"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            android:paddingTop="5dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="10dp"
            android:background="@color/backgroundNavColor"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/referAndEarn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/referEarn"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="10dp"
            android:background="@color/backgroundNavColor"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacyPolicy"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="10dp"
            android:background="@color/backgroundNavColor"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/textColorNav"
            android:paddingLeft="60dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>
