<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/shreeji_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/trueno_font"
                android:gravity="center"
                android:text="@string/loginWelcome"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/trueno_font"
                android:gravity="center"
                android:text="@string/shreejiCabs"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="300dp"
                    android:background="@drawable/gradiant_button_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/gradiant_button_yellow"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner"
                        android:drawableRight="@drawable/user"
                        android:hint="@string/phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_corner"
                        android:drawableRight="@drawable/key"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp" />

                    <Button
                        android:id="@+id/login"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_color_black"
                        android:text="@string/login"
                        android:textColor="@color/theme_color" />


                </LinearLayout>
                <!--            <Button-->
                <!--                android:layout_width="200dp"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginTop="20dp"-->
                <!--                android:layout_gravity="center"-->
                <!--                android:background="@drawable/gradiant_button_yellow"-->
                <!--                android:text="@string/login"-->
                <!--                android:paddingRight="20dp"-->
                <!--                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp" />-->
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/forgotPassword"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/dontHaveAnAccount"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>