<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="300dp"
            android:background="@drawable/gradiant_button_black"/>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:background="@drawable/gradiant_button_yellow">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:background="@drawable/rounded_corner"
                android:hint="@string/password"
                android:drawableRight="@drawable/key"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"/>
            <EditText
                android:id="@+id/confirm_password"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:hint="@string/confirmPassword"
                android:drawableRight="@drawable/key"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp" />

            <Button
                android:id="@+id/submit"
                android:layout_marginTop="20dp"
                android:textColor="@color/theme_color"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/button_color_black"/>


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>