<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/shreeji_logo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/trueno_font"
            android:textStyle="bold"
            android:text="@string/enter_phone_number"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="300dp"
                android:background="@drawable/gradiant_button_black"/>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:padding="20dp"
                android:background="@drawable/gradiant_button_yellow">
                <EditText
                    android:id="@+id/phoneNumber_forgot_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/phone"
                    android:drawableRight="@drawable/user"
                    android:inputType="phone"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"/>

                <Button
                    android:id="@+id/submit"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/theme_color"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:background="@drawable/button_color_black"/>


            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>